--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "Conexion": "Data Source=.\\SQLEXPRESS;Initial Catalog=ToDoList;Trusted_Connection=True;"
+        "Connection": "Data Source=.\\SQLEXPRESS;Initial Catalog=ToDoList;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
     }
 }
